# cande_wrapper

./: .gitignore  .gitlab-ci.yml  GETTING_STARTED.md  LICENSE  README.md  cande_toolbox.txt  cande_wrapper demo.ipynb  meson.build  pyproject.toml
.claude/: settings.local.json
docs/: conf.py  engine.rst  getting_started.rst  index.rst  pipes.rst  vehicle.rst  visualization.rst
src/cande_wrapper/: __init__.py  engine.py  pipes.py  vehicle.py  visualization.py
src/cande_wrapper/toolbox/: __init__.py  cid_model.py  cid_parser.py  cid_writer.py  load_spreading.py  option1_full_mesh.py  option2_pavement.py  option3_live_loads.py  option4_bandwidth.py  option5_rating.py  out_parser.py
src/fortran/: run_cande.f
src/fortran/f2py_gen/: _candemodule.c
src/fortran/inc/: dll_common.fi
src/fortran/stubs/: cmdparse_stub.f  dllstop_stub.f  vb_wrwin_mod.f90  wrwin_stub.f
tests/: conftest.py  test_cid_parser.py  test_cid_writer.py  test_coverage_fill.py  test_engine.py  test_integration.py  test_load_spreading.py  test_option1.py  test_option2.py  test_option3.py  test_option4.py  test_option5.py  test_pipes.py  test_result.py  test_vehicle.py  test_visualization.py
tests/example_data/: MGK-IO.cid
