project('cande-wrapper', 'c', 'fortran',
  version: '0.1.12',
  meson_version: '>=1.1.0',
)

py = import('python').find_installation(pure: false)
py_dep = py.dependency()

# NumPy include directory (needed for f2py)
incdir_numpy = run_command(py,
  ['-c', 'import numpy; print(numpy.get_include())'],
  check: true,
).stdout().strip()

incdir_f2py = run_command(py,
  ['-c', 'import numpy.f2py; print(numpy.f2py.get_include())'],
  check: true,
).stdout().strip()

# Use compile args directly because the venv may be inside the source tree,
# which causes include_directories() to fail in Meson >= 1.4
inc_np = declare_dependency(
  compile_args: ['-I' + incdir_numpy, '-I' + incdir_f2py],
)

# ---------------------------------------------------------
# Source directories (relative paths from project root)
# ---------------------------------------------------------
_cande_rel = 'CANDE Source' / 'CANDEEngine-2025 - MGK Source'
_engine_rel = _cande_rel / 'Engine'
_io_rel = _cande_rel / 'IO'
_cande_inc_rel = _cande_rel / 'Inc'

# Include directories for .fi files
# Our cleaned inc/ dir comes FIRST so dll_common.fi is found there
stub_inc = include_directories('src' / 'fortran' / 'inc')
cande_inc = include_directories(_cande_inc_rel)

# ---------------------------------------------------------
# Collect ALL CANDE Engine source files
# ---------------------------------------------------------
# Excludes: acande.f (old standalone PROGRAM), backup/previous-version files
engine_sources = []
foreach f : [
  'alumin.f', 'anisp.f', 'baksub.f', 'basic.f', 'beamel.f',
  'beamgs.f', 'beamst.f', 'bmizer.f', 'BMResultsXML.f',
  'buckle.f', 'burns.f', 'can1.f', 'canar1.f', 'canbox.f',
  'concircle.f', 'concre.f', 'conend.f', 'conmat.f', 'conmax.f',
  'conrib.f', 'contube.f', 'converger.f', 'convt.f',
  'duncanNEW.f', 'duncanOLD.f', 'emod.f', 'estab.f',
  'genel.f', 'genend.f', 'gennod.f', 'geom.f', 'hardin.f',
  'heroic.f', 'intp1.f', 'jmod.f', 'MCMohrCoulomb.f',
  'MeshXML.f', 'MeshXMLMat.f', 'modmsh.f',
  'newpip.f', 'plaspro.f', 'plasti.f', 'plsnbk.f',
  'prep.f', 'prhero.f', 'princ.f',
  'readm.f', 'reduci.f', 'resout.f', 'respip.f', 'ResultsXML.f',
  'saved.f', 'savedXML.f', 'saveg.f', 'slpjnt.f',
  'steel.f', 'stfsub.f', 'stifns.f', 'stress.f',
  'xangle.f', 'xcan.f', 'xcan2.f', 'xfaces.f', 'xlink.f',
]
  engine_sources += files(_engine_rel / f)
endforeach

# .for files in Engine
foreach f : [
  'MCplasticDP.for', 'MCplasticYF.for',
  'MCtensionDT.for', 'MCtensionYF.for',
  'ScalingData.for',
]
  engine_sources += files(_engine_rel / f)
endforeach

# ---------------------------------------------------------
# Collect all CANDE IO source files
# ---------------------------------------------------------
io_sources = []
foreach f : [
  'FATOI.FOR', 'GetInputFromUnit.F', 'GetInputLine.F',
  'IERRMS.F', 'IERRTX.F', 'IMSGTX.F', 'InputError.f',
  'IsValidCommand.F', 'LEFJUS.FOR', 'LENSTR.FOR',
  'PARSE.FOR', 'PMSG.FOR', 'PMSG1A.FOR', 'PMSG1C.FOR',
  'PMSG1I.FOR', 'PMSG1R.FOR', 'PMSG2C.FOR', 'PMSG2I.FOR',
  'PMSG2R.FOR', 'PMSGCI.FOR', 'PMSGCR.FOR', 'PMSGIR.FOR',
  'PMSGRI.FOR', 'PRTF.FOR', 'PRTFSP.FOR', 'PRTFSU.FOR',
  'STRIP.FOR', 'WrtTitle.for',
]
  io_sources += files(_io_rel / f)
endforeach

# ---------------------------------------------------------
# Stub replacements for Intel-specific code
# ---------------------------------------------------------
stub_sources = files(
  'src' / 'fortran' / 'stubs' / 'vb_wrwin_mod.f90',
  'src' / 'fortran' / 'stubs' / 'wrwin_stub.f',
  'src' / 'fortran' / 'stubs' / 'dllstop_stub.f',
  'src' / 'fortran' / 'stubs' / 'cmdparse_stub.f',
)

# ---------------------------------------------------------
# Entry point
# ---------------------------------------------------------
entry_source = files('src' / 'fortran' / 'run_cande.f')

# ---------------------------------------------------------
# Build the CANDE engine as a static library
# ---------------------------------------------------------
# The stub module (vb_wrwin_mod.f90) must be compiled first
# so that any source using USE VB_WRWIN_MOD can find the .mod file
cande_engine_lib = static_library('cande_engine',
  stub_sources + engine_sources + io_sources,
  include_directories: [stub_inc, cande_inc],
  fortran_args: ['-w', '-fallow-argument-mismatch', '-std=legacy', '-fdec', '-freal-4-real-8', '-fno-automatic'],
)

# ---------------------------------------------------------
# Pre-generated f2py wrapper files
# ---------------------------------------------------------
# Generated by: python -m numpy.f2py src/fortran/run_cande.f -m _cande --lower --build-dir src/fortran/f2py_gen
# Regenerate if the run_cande subroutine signature changes.
f2py_wrapper_c = files('src' / 'fortran' / 'f2py_gen' / '_candemodule.c')
f2py_wrapper_f = files('src' / 'fortran' / 'f2py_gen' / '_cande-f2pywrappers.f')

# f2py runtime (fortranobject.c) — provides PyFortran_Type, PyFortranObject_NewAsAttr
f2py_runtime_c = incdir_f2py / 'fortranobject.c'

# ---------------------------------------------------------
# Build the f2py extension module
# ---------------------------------------------------------
py.extension_module('_cande',
  [entry_source, f2py_wrapper_c, f2py_wrapper_f, f2py_runtime_c],
  include_directories: [stub_inc, cande_inc],
  link_with: cande_engine_lib,
  dependencies: [py_dep, inc_np],
  subdir: 'cande_wrapper',
  install: true,
  fortran_args: ['-w', '-fallow-argument-mismatch', '-std=legacy', '-fdec', '-freal-4-real-8', '-fno-automatic'],
)

# ---------------------------------------------------------
# Install Python package files
# ---------------------------------------------------------
py.install_sources(
  'src' / 'cande_wrapper' / '__init__.py',
  'src' / 'cande_wrapper' / 'engine.py',
  subdir: 'cande_wrapper',
)
